<resources>
    <string name="app_name">alarm_project</string>
    <string name="alarm_channel_name_alarms">Morning alarms</string>
    <string name="alarm_channel_description_alarms">High priority alarms with sound and vibration</string>
    <string name="alarm_channel_name_silent">Silent alerts</string>
    <string name="alarm_channel_description_silent">Background updates without audible alert</string>
    <string name="alarm_notification_title">알람이 울리고 있습니다.</string>
    <string name="alarm_notification_body">버튼을 눌러 알람을 제어하세요.</string>
    <string name="alarm_title_text">알람</string>
    <string name="alarm_default_label">시계</string>
    <string name="alarm_notification_heads_up_title">시계</string>
    <string name="alarm_notification_heads_up_message">알람 시간이 되었습니다.</string>
    <string name="alarm_notification_heads_up_instruction">버튼을 눌러 알람을 제어하세요.</string>
    <string name="alarm_action_dismiss">해제</string>
    <string name="alarm_action_snooze">다시 울림</string>
    <string name="alarm_action_snooze_short">다시 올림</string>
    <string name="alarm_heads_up_label">시계</string>
</resources>
